--- a/glossary.tex
+++ b/glossary.tex
@@ -19,13 +19,14 @@
 \newacronym{em}{EM}{electromagnetic}
 \newacronym{es}{ES}{Elastic Scattering}
 \newacronym{fermilab}{Fermilab}{Fermi National Accelerator Laboratory}
-\newacronym{fnal}{FNAL}{Fermi National Accelerator Laboratory}
+%\newacronym{fnal}{FNAL}{Fermi National Accelerator Laboratory}
 \newacronym{gallex}{GALLEX}{Gallium Experiment}
-\newacronym{geant4}{Geant4}{GEometry ANd Tracking}
+\newacronym{geant4}{GEANT4}{GEometry ANd Tracking}
 \newacronym{genie}{GENIE}{Generates Events for Neutrino Interaction Experiments}
 \newacronym{icarus}{ICARUS}{Imaging Cosmic and Rare Underground Signals}
 \newacronym{karmen}{KARMEN}{Karlsruhe Rutherford Medium Energy Neutrino}
 \newacronym{larsoft}{LArSoft}{Liquid Argon Software}
+\newacronym{lar}{LAr}{Liquid Argon}
 \newacronym{lartpc}{LArTPC}{Liquid Argon Time Projection Chamber}
 \newacronym{lep}{LEP}{Large Electron-Positron Collider}
 \newacronym{lsnd}{LSND}{Liquid Scintillator Neutrino Detector}
@@ -54,7 +55,7 @@
 \newacronym{sm}{SM}{Standard Model}
 \newacronym{sno}{SNO}{Sudbury Neutrino Observatory}
 \newacronym{sp}{SP}{Space Point}
-\newacronym{tla}{TLA}{Three Letter Acronym}
+%\newacronym{tla}{TLA}{Three Letter Acronym}
 \newacronym{tpb}{TPB}{Tetraphenyl Butadiene}
 \newacronym{tpc}{TPC}{Time Projection Chamber}
 \newacronym{t2k}{T2K}{Tokai to Kamioka}
