--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1,6 +1,17 @@
 %% Obtained via the getNewBibTeX script and the SPIRES biblio service
 
 % Generic stuff
+@book{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics,
+  title="{Particles and Fundamental Interactions: An Introduction to Particle Physics }",
+  author={Braibant, S. and Giacomelli, G. and Spurio, M.},
+  isbn={9789400724648},
+  lccn={2011940974},
+  series={Undergraduate Lecture Notes in Physics},
+  url={https://books.google.co.uk/books?id=e8YUUG2pGeIC},
+  year={2011},
+  publisher={Springer Netherlands}
+}
+
 @misc{White_Paper,
       author         = "Abazajian, K. N. and others",
       title          = "{Light Sterile Neutrinos: A White Paper}",
@@ -85,6 +96,59 @@
   publisher={John Wiley, New York}
 }
 
+@article{neutrinoless_double_beta_decay,
+	doi = {10.1142/s0218301311020186},
+	url = {https://doi.org/10.1142%2Fs0218301311020186},
+	year = 2011,
+	month = {sep},
+	publisher = {World Scientific Pub Co Pte Lt},
+	volume = {20},
+	number = {09},
+	pages = {1833--1930},
+	author = {Werner Rodejohann},
+	title = "{Neutrino-less Double Beta Decay and Particle Physics}",
+	journal = {International Journal of Modern Physics E}
+}
+
+@misc{sbnd_timeline,
+title = "{SBND Project Overview: progress, schedule and resources}",
+author = {Anne Schukraft},
+year = "2022",
+howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=26247}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=26247}},
+note = "{[Accessed: Aug, 2022]}"
+}
+
+@misc{sbnd_pot,
+title = "{SBND POT and Event Estimates}",
+author = {Dave Schmitz},
+year = "2022",
+howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27405}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27405}},
+note = "{[Accessed: Aug, 2022]}"
+}
+
+@book{introduction_to_mathematical_statistics_book,
+  title = "{Introduction to Mathematical Statistics}",
+  author = {Paul G. Hoel},
+  year = {1971},
+  publisher = "{John Wiley \& Sons}",
+  edition = "Fourth"
+}
+
+@book{critical_chi2_book,
+title = "{PROBABILITY AND STATISTICS IN PARTICLE PHYSICS}",
+author = "{A. G. Frodesen, O. Skjeggestad, H. T\o{}fte}",
+year = "1979",
+publisher = "Columbia University Press"
+}
+
+@book{Introduction_to_Particle_and_Astroparticle_Physics_book,
+author = "{Alessandro De Angelis
+Mário Pimenta}",
+edition = "second",
+title = "{Introduction to Particle and Astroparticle Physics: Multimessenger Astronomy and its Particle Physics Foundations}",
+publisher = "Springer International Publishing AG",
+year = "2018"
+}
 
 % chap2 - neutrino theory
 @misc{Pauli_letter,
@@ -205,6 +269,28 @@
       year          = "2016",
       url           = "https://cds.cern.ch/record/2217139",
       doi           = "$10.1142/9789814733519\_0008$",
+}
+
+@book{dirac_majorana_neutrinos,
+title = "{The Physics Of The Standard Model And Beyond}",
+author = "{T. Morii , C. S. Lim , S. N. Mukherjee}", 
+year = 2004, 
+publisher = "{World Scientific Publishing Co. Pte. Ltd.}",
+isbn = {981-02-4571-8}
+}
+
+@article{leptonic_cp_violation,
+    author = "Branco, G. C. and Felipe, R. Gonzalez and Joaquim, F. R.",
+    title = "{Leptonic CP Violation}",
+    eprint = "1111.5332",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-PH-TH-2011-289, CFTP-11-020",
+    doi = "10.1103/RevModPhys.84.515",
+    journal = "Rev. Mod. Phys.",
+    volume = "84",
+    pages = "515--565",
+    year = "2012"
 }
 
 @article{LSND_excess,
@@ -654,13 +740,14 @@ year = {1913}
 }
 
 
-@article{space_charge_math,
+@misc{space_charge_math,
 author = {Palestini, Sandro and Mcdonald, Kirk},
-year = {2010},
+year = {2016},
 month = {01},
 pages = {},
 title = {Space Charge in Ionization Detectors},
-url   = {https://physics.princeton.edu/~mcdonald/examples/spacecharge.pdf}
+howpublished   = { \href{https://physics.princeton.edu/examples/spacecharge.pdf}{https://physics.princeton.edu/examples/spacecharge.pdf}},
+note = "{[Accessed: August, 2022]}"
 }
 
 @article{LArTPC_review,
@@ -672,6 +759,32 @@ title = "{Review of Liquid Argon Detector Technologies in the Neutrino Sector}",
 volume = {11},
 journal = {Applied Sciences},
 doi = {10.3390/app11062455}
+}
+
+@article{FNAL_proton_accelerator,
+    author = "Shiltsev, Vladimir",
+    title = "{Fermilab Proton Accelerator Complex Status and Improvement Plans}",
+    eprint = "1705.03075",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.acc-ph",
+    reportNumber = "FERMILAB-PUB-17-129-APC",
+    doi = "10.1142/S0217732317300129",
+    journal = "Mod. Phys. Lett. A",
+    volume = "32",
+    number = "16",
+    pages = "1730012",
+    year = "2017"
+}
+
+@article{SciBooNE_BNB_description,
+    author = "Aguilar-Arevalo, A. A. and others",
+    collaboration = "SciBooNE",
+    title = "{Bringing the SciBar detector to the booster neutrino beam}",
+    eprint = "hep-ex/0601022",
+    archivePrefix = "arXiv",
+    reportNumber = "FERMILAB-PROPOSAL-0954",
+    month = "1",
+    year = "2006"
 }
 
 @Book{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book,
@@ -721,13 +834,16 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 }
 
 
+
 @misc{sbnd_crt,
-      title="{A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors}", 
-      author={M. Auger and M. Del Tutto and A. Ereditato and B. Fleming and D. Goeldi and E. Gramellini and R. Guenette and W. Ketchum and I. Kreslo and A. Laube and D. Lorca and M. Luethi and C. Rudolf von Rohr and J. R. Sinclair and S. R. Soleti and M. Weber},
-      year={2016},
-      eprint={1612.04614},
-      archivePrefix={arXiv},
-      primaryClass={physics.ins-det}
+  doi = {10.48550/ARXIV.1612.04614},
+  url = {https://arxiv.org/abs/1612.04614},
+  author = {Auger, M. and Del Tutto, M. and Ereditato, A. and Fleming, B. and Goeldi, D. and Gramellini, E. and Guenette, R. and Ketchum, W. and Kreslo, I. and Laube, A. and Lorca, D. and Luethi, M. and von Rohr, C. Rudolf and Sinclair, J. R. and Soleti, S. R. and Weber, M.},
+  keywords = {Instrumentation and Detectors (physics.ins-det), High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
+  title = {A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors},
+  publisher = {arXiv},
+  year = {2016},
+  copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
 @article{ARAPUCA,
@@ -792,7 +908,8 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 
 @misc{ICARUS_image,
   title = "{Schematic of the ICARUS detector.}",
-  note = "{[Online] Available: https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths [January, 2022].}",
+  howpublished = {\href{https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths}{https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths}},
+  note = "{[Accessed: January, 2022]}",
   author = {{Sandbox Studio, Chicago}}
 }
 
@@ -805,7 +922,7 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
       reportNumber  = "CERN-SPSC-2017-012, SPSC-SR-207",
       month         = "Mar",
       year          = "2017",
-      url           = "https://cds.cern.ch/record/2256748",
+      howpublished  = {\href{https://cds.cern.ch/record/2256748}{https://cds.cern.ch/record/2256748}},
 }
 
 @article{light_dark_matter,
@@ -872,17 +989,33 @@ note = "{[Accessed: July, 2022]}"
     year = "2017"
 }
 
-@misc{gaushitfinder,
+@article{neutrino_energy_reconstruction,
+  title = {Neutrino energy estimation in neutral current interactions and prospects for sterile neutrino searches},
+  author = {Furmanski, A. P. and Hilgenberg, C.},
+  journal = {Phys. Rev. D},
+  volume = {103},
+  issue = {11},
+  pages = {112011},
+  numpages = {13},
+  year = {2021},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.103.112011},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.103.112011}
+}
+
+
+@misc{recombination_0.64,
 title = "{SBND Recombination Study for Shower Calorimetry}",
-author = "{Tyley, E.}",
+author = {Ed Tyley},
 year = "2019",
 howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}},
 note = "{[Accessed: July, 2022]}"
 }
 
-@misc{recombination_0.64,
+@misc{gaushitfinder,
 title = "{GausHitFinder Hit Finding and Fitting}",
-author = "{Usher, T.}",
+author = {Tracey Usher},
 year = "2018",
 howpublished = {\href{https://indico.fnal.gov/event/18523/contributions/47921/attachments/29850/36753/GaussHitFinder121118.pdf}{https://indico.fnal.gov/event/18523/contributions/47921\\/attachments/29850/36753/GaussHitFinder121118.pdf}},
 note = "{[Accessed: July, 2022]}"
@@ -904,9 +1037,10 @@ note = "{[Accessed: July, 2022]}"
 }
 
 @misc{ESTAR_Database,
-  title = "{ESTAR, PSTAR, and ASTAR: Computer Programs for Calculating Stopping-Power and Range Tables for Electrons, Protons, and Helium Ions (version 1.2.3).}",
-  note = "{[Online] Available: http://physics.nist.gov/Star [September, 2021]. National Institute of Standards and Technology, Gaithersburg, MD.}",
-  author = {Berger, M.J. and Coursey, J.S. and Zucker, M.A. and Chang, J.}
+  title = "{ESTAR, PSTAR, and ASTAR: Computer Programs for Calculating Stopping-Power and Range Tables for Electrons, Protons, and Helium Ions (version 2.0.1).}",
+  note = "{National Institute of Standards and Technology, Gaithersburg, MD., [Accessed: September, 2021].}",
+  author = {Berger, M.J. and Coursey, J.S. and Zucker, M.A. and Chang, J.},
+  howpublished = {\href{http://physics.nist.gov/Star}{http://physics.nist.gov/Star}}
 }
 
 @article{ArgoNeuT_recombination_paper,
@@ -1114,10 +1248,45 @@ howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?
           year = "2010"
 }
 
+@misc{Geant4_website,
+   title="{GEANT4 A Simulation Toolkit}",
+   howpublished = "{\href{https://geant4.web.cern.ch/}{https://geant4.web.cern.ch/}}",
+   note = "{[Accessed August, 2022]}"
+}
+
+@article{Pandora_paper,
+    author = "Acciarri, R. and others",
+    collaboration = "MicroBooNE",
+    title = "{The Pandora multi-algorithm approach to automated pattern recognition of cosmic-ray muon and neutrino events in the MicroBooNE detector}",
+    eprint = "1708.03135",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "FERMILAB-PUB-17-306-ND",
+    doi = "10.1140/epjc/s10052-017-5481-6",
+    journal = "Eur. Phys. J. C",
+    volume = "78",
+    number = "1",
+    pages = "82",
+    year = "2018"
+}
+
+@article{Geant4_paper,
+title = {Geant4—a simulation toolkit},
+journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+volume = {506},
+number = {3},
+pages = {250-303},
+year = {2003},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/S0168-9002(03)01368-8},
+author = {S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. Araujo and P. Arce and M. Asai and D. Axen and S. Banerjee and G. Barrand and F. Behner and L. Bellagamba and J. Boudreau and L. Broglia and A. Brunengo and H. Burkhardt and S. Chauvie and J. Chuma and R. Chytracek and G. Cooperman and G. Cosmo and P. Degtyarenko and A. Dell'Acqua and G. Depaola and D. Dietrich and R. Enami and A. Feliciello and C. Ferguson and H. Fesefeldt and G. Folger and F. Foppiano and A. Forti and S. Garelli and S. Giani and R. Giannitrapani and D. Gibin and J.J. {Gómez Cadenas} and I. González and G. {Gracia Abril} and G. Greeniaus and W. Greiner and V. Grichine and A. Grossheim and S. Guatelli and P. Gumplinger and R. Hamatsu and K. Hashimoto and H. Hasui and A. Heikkinen and A. Howard and V. Ivanchenko and A. Johnson and F.W. Jones and J. Kallenbach and N. Kanaya and M. Kawabata and Y. Kawabata and M. Kawaguti and S. Kelner and P. Kent and A. Kimura and T. Kodama and R. Kokoulin and M. Kossov and H. Kurashige and E. Lamanna and T. Lampén and V. Lara and V. Lefebure and F. Lei and M. Liendl and W. Lockman and F. Longo and S. Magni and M. Maire and E. Medernach and K. Minamimoto and P. {Mora de Freitas} and Y. Morita and K. Murakami and M. Nagamatu and R. Nartallo and P. Nieminen and T. Nishimura and K. Ohtsubo and M. Okamura and S. O'Neale and Y. Oohata and K. Paech and J. Perl and A. Pfeiffer and M.G. Pia and F. Ranjard and A. Rybin and S. Sadilov and E. {Di Salvo} and G. Santin and T. Sasaki and N. Savvas and Y. Sawada and S. Scherer and S. Sei and V. Sirotenko and D. Smith and N. Starkov and H. Stoecker and J. Sulkimo and M. Takahata and S. Tanaka and E. Tcherniaev and E. {Safai Tehrani} and M. Tropeano and P. Truscott and H. Uno and L. Urban and P. Urban and M. Verderi and A. Walkden and W. Wander and H. Weber and J.P. Wellisch and T. Wenaus and D.C. Williams and D. Wright and T. Yamada and H. Yoshida and D. Zschiesche},
+keywords = {Simulation, Particle interactions, Geometrical modelling, Software engineering, Object-oriented technology, Distributed software development},
+abstract = {Geant4 is a toolkit for simulating the passage of particles through matter. It includes a complete range of functionality including tracking, geometry, physics models and hits. The physics processes offered cover a comprehensive range, including electromagnetic, hadronic and optical processes, a large set of long-lived particles, materials and elements, over a wide energy range starting, in some cases, from 250eV and extending in others to the TeV energy range. It has been designed and constructed to expose the physics models utilised, to handle complex geometries, and to enable its easy adaptation for optimal use in different sets of applications. The toolkit is the result of a worldwide collaboration of physicists and software engineers. It has been created exploiting software engineering and object-oriented technology and implemented in the C++ programming language. It has been used in applications in particle physics, nuclear physics, accelerator design, space engineering and medical physics.}
+}
 
 @phdthesis{Dom's_thesis,
     month = {July},
-    title = "{Developments Towards a {\ensuremath{\nu}}e CC Sterile Appearance Sensitivity in the Short-Baseline Neutrino Programme}",
+    title = "{Developments Towards a \nue CC Sterile Appearance Sensitivity in the Short-Baseline Neutrino Programme}",
     school = {University of Sheffield},
     author = {Dominic Barker},
     year = {2020},
